--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <p>Crea tu cuenta <a href="/crearcuenta">aqui</a></p>
-    <p>Crea tu cuenta <a href="/login">aqui</a></p>
+    <p>Ingresa con tu cuenta <a href="/login">aqui</a></p>
 </body>
 </html>
